Fix spacing for compact mode

--- a/client/branded/src/search-ui/input/experimental/CodeMirrorQueryInputWrapper.module.scss
+++ b/client/branded/src/search-ui/input/experimental/CodeMirrorQueryInputWrapper.module.scss
@@ -13,11 +13,11 @@
     }
 
     &--compact {
-        padding: 0.35rem;
-        margin: -0.35rem;
+        padding: 0.5rem;
+        margin: -0.5rem;
 
         .suggestions {
-            padding: 3rem 0.25rem 0.5rem 0.25rem;
+            padding: 3rem 0.5rem 0.5rem 0.5rem;
         }
     }
 }
